package pprog.domain;

public class Job {

    private String name;

    public Job (String name) {
        this.name = name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    @Override
    public String toString() {
        return String.format("Job: %s\n", name);
    }

}
